<resources>
    <string name="app_name">World Treasure</string>
    <string name="terms_of_use_and_privacy_policy">By Using this application you agree to our <u> Terms of Use </u> and <u>Privacy Policy</u></string>
    <string name="turn_on_location">For a better experience, turn on device location, which uses Google\'s location services.</string>
    <string name="no_thanks">No,Thanks</string>
    <string name="be_safe">Be safe</string>
    <string name="terms_message">We\'ve updated our Terms of Use and Privacy Policy</string>
    <string name="pay_attention">Like any outdoor activity the app can be dangerous. Pay attention to your surroundings while you play.</string>
    <string name="make_sure_to_turn_on">Make Sure you turn on location services so we can show you nearby geocaces</string>
    <string name="i_understand">I Understand</string>
    <string name="i_agree">I Agree</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_msg">There are over 3 million geocaches in the world. Join the community and discover real-world hidden treasure!</string>
    <string name="i_m_excited">I\'m Excited</string>
    <string name="location_required">Location Required!</string>
    <string name="i_m_ready">I\'m Ready</string>
    <string name="virtual_msg">You won\'t take a physical container when you navigate to this geocache. You may be asked to take a photo, answer a question, or complete a task to prove you where there. Read the details to find out more.</string>
    <string name="virtual">Virtual</string>
    <string name="ok">Ok</string>
    <string name="traditional_msg">This is the most common geocachr type Navigate to the geocache location and look for the hidden container. Read the detail of you get stuck, and don\'t forget to sign the logbook!</string>
    <string name="traditional">Traditional</string>
    <string name="letter_box">Letter Box</string>
    <string name="letterbox_msg">These geocache often use clues instead of exact coordinates. Read the details for instructions.</string>
    <string name="privacy_msg_signup">By using this application you agree to our <u> Terms of Use </u> and <u>Privacy Policy</u>. After account creation, go to Name of app.com setting>Authorizations to change how your info is shred with Authorized Developers</string>
    <string name="create_an_account">Create an account to start finding geocaches!</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="registration">Registration</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in_with_your_account">Log in with your account</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="user_name_already_registered">User Name Already Registered. \nPlease choose another username</string>
    <string name="choose_your_name">Choose Your name</string>
    <string name="choose_username_to_start">Choose a username to start finding geocaches!</string>
    <string name="link_account">Link Account</string>
    <string name="already_have_an_account_log_in">Already Have an account? <u>>Log In</u></string>
    <string name="drafts">Drafts</string>
    <string name="dont_have_drafts">You Don\'t have any drafts</string>
    <string name="save_draft">Save a draft by toggling the draft option while logging a geocache.</string>
    <string name="drafts_msg">Drafts are saved to your account so you can finish them from anywhere.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacypolicymsg">Unless otherwise specified on the Site, you may download the various applications accessible through the Site pursuant to the terms and conditions of the License</string>
    <string name="_3rd_party_license">3rd Party License</string>
    <string name="world_treasure_intro">World Treasure \n\n​ A GeoCaching app. Real-world, outdoor, international treasure-hunt. Using GPS-enabled devices, participants navigate to a specific set of GPS coordinates and then attempt to find the \"clue/geocache\" hidden at that location. Join the World Treasure community</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="description">Description</string>
    <string name="continued">Continue</string>
    <string name="letterboxmsg">These geocaches often use clues instead of exact coordinates. Read the detail for instruction.</string>
    <string name="trackables">Trackables</string>
    <string name="text_view">Text View</string>
    <string name="web_view">Web View</string>
    <string name="yours">Yours</string>
    <string name="geocache">Geocache</string>
    <string name="no_trackables_msg">There are no trackables in your inventory. Search for trackables to add them to your inventory</string>
    <string name="trackable_code">Trackable | TB7RHKG</string>
    <string name="_0_m">0 m</string>
    <string name="americoin">Americoin</string>
    <string name="log">Log</string>
    <string name="log_trackable">Log Trackable</string>
    <string name="enter_trackable_code">Enter Trackable Code</string>
    <string name="write">Write Note</string>
    <string name="write_note_to_the_trackable_owner">write note to the trackable owner</string>
    <string name="souvenirs_msg">Souvenirs are virtual pieces of art that you can earn and display on your public profile.\nGeocaching HQ releases digital souvenirs each year to celebrate special dates, places, and events.</string>
    <string name="search">Search</string>
    <string name="search_type">Search Type</string>
    <string name="exdummy">EX: TB7VEQH</string>
    <string name="tb7rhkg_in_gc103c7">TB7RHKG\n in GC103c7</string>
    <string name="goal">Goal:</string>
    <string name="to_see_all_50_states">To see all 50 states!</string>
    <string name="read_more">Read More</string>
    <string name="discriptiondoted">Discription:</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="use_metric_system">Use Metric System</string>
    <string name="continue_with_apple">Continue With Apple</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="facebook_app_id">566960443979237</string>
    <string name="fb_login_protocol_scheme">fb566960443979237</string>
    <string name="signUP">Sign Up</string>

    <string name="dot">&#8226;</string>
    <string name="nameShouldBeFiveCharsLong">Name must contain at least 5 characters</string>
    <string name="nameAlphaNumericOnly">Only Alpha Numeric names are allowed</string>
    <string name="weak_password">Weak password !</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="loadingPleaseWait">Please wait !</string>
    <string name="signupErrorOccured">Sign up Error occured!</string>
    <string name="signedSuccessfull">Account Created!</string>
    <string name="signup_Successful">Sign up Successful!</string>
    <string name="login">Login</string>
    <string name="loginErrorOccured">Error Logging in ! try again</string>
    <string name="login_successful">Login Successfull</string>

</resources>
