<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_blue">

    <ImageButton
        android:id="@+id/ivbacklogtrackables"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/bright_blue"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvlogtrackable"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:text="@string/log_trackable"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_view_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvlogtrackable"
        android:layout_marginTop="@dimen/_50sdp"
        >
       <EditText
           android:layout_width="match_parent"
           android:layout_height="@dimen/_40sdp"
           android:layout_marginStart="@dimen/_25sdp"
           android:layout_marginEnd="@dimen/_25sdp"
           android:layout_marginTop="@dimen/_30sdp"
           android:drawablePadding="@dimen/_25sdp"
           android:padding="@dimen/_10sdp"
           android:drawableStart="@drawable/key_icon"
           android:background="@drawable/round_blue_bg"
           android:hint="@string/enter_trackable_code"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:id="@+id/ettrackablecode"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnwritenote"
            android:text="@string/write"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/ettrackablecode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/round_blue_bg"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_110sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnwritenote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_15sdp"
            android:id="@+id/tvwritenote"
            android:textSize="14sp"
            android:textColor="#96989a"
            android:lineSpacingExtra="6sp"
            android:text="@string/write_note_to_the_trackable_owner"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>