<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_blue">

    <ImageView
        android:id="@+id/ivbacksignup"
        android:layout_width="@dimen/_40sdp"
        android:onClick="onBackPressed0"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/back_arrow"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivbacksignup" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_outer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvsignup">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvregistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/registration"
                    android:textColor="@color/bright_blue"
                    android:textSize="27sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvregistrationmsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/create_an_account"
                    android:textColor="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvregistration" />

                <EditText
                    android:id="@+id/etemailsignup"
                    android:maxLength="64"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/roundtextbg"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/email_address"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/_14ssp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toTopOf="@id/etusernamesignup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvregistrationmsg" />

                <EditText
                    android:id="@+id/etusernamesignup"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:maxLength="32"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/roundtextbg"
                    android:drawableStart="@drawable/user_name_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/username"
                    android:textColor="#000000"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toTopOf="@id/etpassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etemailsignup" />

                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="0dp"
                    android:maxLength="32"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/roundtextbg"
                    android:drawableStart="@drawable/password_icon"
                    android:drawableEnd="@drawable/ic_visible__"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:textColor="#000000"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/_14ssp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableTint="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/btnsignup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etusernamesignup" />

                <Button
                    android:id="@+id/btnsignup"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_blue_bg"
                    android:textColor="@color/white"
                    android:text="@string/signUP"
                    android:onClick="onSignUpButtonClicked"
                    app:layout_constraintBottom_toTopOf="@id/tvprivacymsg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etpassword" />

                <TextView
                    android:id="@+id/tvprivacymsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="4sp"
                    android:textColor="@color/silver"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnsignup"
                    android:text="@string/privacy_msg_signup" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>