<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootview"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".Registration_Interface_Activity">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/round_transparent_bg"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintBottom_toTopOf="@+id/image_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/image_back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_150sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/constraints"
                >

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/round_white_bg"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#0d0d0d"
                    app:layout_constraintBottom_toTopOf="@id/btnGoogle"
                    app:layout_constraintEnd_toStartOf="@id/btn_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_white_bg"
                    android:text="@string/log_in"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#0d0d0d"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_signup"
                    app:layout_constraintTop_toTopOf="@+id/btn_signup" />

                <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_white_bg"
                    android:drawableStart="@drawable/google"
                    android:drawableEnd="@drawable/red_arrow"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:text="@string/continue_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toTopOf="@id/btn_facebook"
                    app:layout_constraintTop_toBottomOf="@id/btn_signup" />

                <Button
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_white_bg"
                    android:drawableStart="@drawable/face"
                    android:drawableEnd="@drawable/blue_arrow"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:text="@string/continue_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toTopOf="@id/btn_apple"
                    app:layout_constraintTop_toBottomOf="@id/btnGoogle" />


                <Button
                    android:id="@+id/btn_apple"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_white_bg"
                    android:drawableStart="@drawable/apple"
                    android:drawableEnd="@drawable/black_arrow"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:text="@string/continue_with_apple"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toTopOf="@id/tv_disclaimer"
                    app:layout_constraintTop_toBottomOf="@id/btn_facebook" />

                <TextView
                    android:id="@+id/tv_disclaimer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/terms_of_use_and_privacy_policy"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_apple" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
